* datatable: fix scrollbar overflow

--- a/src/less/views/datatable.less
+++ b/src/less/views/datatable.less
@@ -248,7 +248,6 @@
     position: absolute;
     height: 10px;
     top: 0px;
-    min-width: 50px;
     left: 0;
     background-color: lighten(@color-gray, 15%);
   }
